--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
       you informed."
     />
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://www.yourwebsite.com">
-    <meta property="og:image" content="%PUBLIC_URL%/og-image.png">
+    <meta property="og:url" content="https://redoxx-ai-summarizer.vercel.app/">
+    <meta property="og:image" content="%https://redoxx-ai-summarizer.vercel.app%/og-image.png">
     <meta property="og:site_name" content="Redoxx-AI Summarizer">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Redoxx-AI Summarizer">
     <meta name="twitter:description" content="Discover the power of AI-driven article summarization. Our website utilizes cutting-edge artificial intelligence to provide you with concise and insightful summaries across a diverse range of topics, saving you time and keeping you informed.">
-    <meta name="twitter:image" content="http://www.yourwebsite.com/og-image.png">
+    <meta name="twitter:image" content="https://redoxx-ai-summarizer.vercel.app/og-image.png">
     <meta name="twitter:site" content="@Redoxx_Code">
 
 
