--- a/index.html
+++ b/index.html
@@ -11,8 +11,17 @@
       insightful summaries across a diverse range of topics, 
       saving you time and keeping you informed."
     />
+    <meta 
+      property="description" 
+      content="Discover the power of AI-driven 
+      article summarization. Our website utilizes cutting-edge 
+      artificial intelligence to provide you with concise and 
+      insightful summaries across a diverse range of topics, 
+      saving you time and keeping you informed."
+    />
 
     <meta property="og:title" content="Redoxx-AI Summarizer">
+    <meta property="og:descriptioncontent="Redoxx-AI Summarizer">
     <meta 
       property="og:description" 
       content="Discover the power of AI-driven 
