fixed another issue with a meta tag

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     />
 
     <meta property="og:title" content="Redoxx-AI Summarizer">
-    <meta property="og:description content="Redoxx-AI Summarizer">
+    <meta property="og:description" content="Redoxx-AI Summarizer">
     <meta 
       property="og:description" 
       content="Discover the power of AI-driven 
