fixed something with the og image

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     />
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://redoxx-ai-summarizer.vercel.app/">
-    <meta property="og:image" content="%https://redoxx-ai-summarizer.vercel.app%/og-image.png">
+    <meta property="og:image" content="https://redoxx-ai-summarizer.vercel.app/og-image.png">
     <meta property="og:site_name" content="Redoxx-AI Summarizer">
 
     <meta name="twitter:card" content="summary_large_image">
