added meta property

--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
       insightful summaries across a diverse range of topics, 
       saving you time and keeping you informed."
     />
-    <meta 
-      property="description" 
+    <meta property="description" 
       content="Discover the power of AI-driven 
       article summarization. Our website utilizes cutting-edge 
       artificial intelligence to provide you with concise and 
       insightful summaries across a diverse range of topics, 
-      saving you time and keeping you informed."
+      saving you time and keeping you informed." 
     />
 
     <meta property="og:title" content="Redoxx-AI Summarizer">
