--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
     <link rel="icon" type="image/png" href="/favicon.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&family=Lato&family=Montserrat:wght@100;200;300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&family=Lato&family=Montserrat:wght@100;200;300;400&family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+
 
     <title>Redoxx-AI Summarizer</title>
   </head>
